# nunchi-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
nunchi_eval/: __init__.py  battery.py  cli.py  profile.py  traj.py
nunchi_eval/adapters/: __init__.py  evalview.py
tests/: test_battery.py  test_evalview_adapter.py  test_profile.py  test_traj.py
