[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nunchi-eval"
version = "0.1.0"
description = "Put p-values on snapshot diffs: statistical regression verdicts (noise floor + permutation tests) for agent snapshot tools. First adapter: EvalView."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hada Kang" }]
keywords = [
    "llm", "agents", "evaluation", "regression-testing", "snapshot-testing",
    "stability", "nondeterminism", "evalview", "statistics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["nunchi-drift>=0.1.1"]

[project.urls]
Homepage = "https://github.com/hadakang/nunchi-eval"
Repository = "https://github.com/hadakang/nunchi-eval"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
nunchi-eval = "nunchi_eval.cli:main"

[tool.setuptools]
packages = ["nunchi_eval", "nunchi_eval.adapters"]
